# scabbard

./: .gitignore  CMakeLists.txt  README.md  scabbard.cmake  test-hip-amdgcn-amd-amdhsa-gfx90a.cui  test-hip-amdgcn-amd-amdhsa-gfx90a.tmp.bc  tioga10-clang-15-4021582.core  tioga10-clang-15-505233.core  tioga10-clang-15-900015.core  tioga11-verif-2768912.core  tioga16-test.instr.out-60297.core  tioga21-test.instr.out-2053443.core  tioga21-test.instr.out-2507464.core  tioga22-test.instr.out-2741652.core  tioga22-test.instr.out-2742973.core  tioga25-maybe-race-test-1121409.core  tioga27-managed_clock_t-474899.core  tioga28-verif-264936.core  tioga30-maybe-race-test-3360289.core  tioga32-clang-15-1840538.core  unknown_exe.scabbard.trace
config/: sub-version.h.config  version.h.config
doc/: LLNL-README.md  dep-trace-flow.mmd  notes.md  scratch.md
instr/: CMakeLists.txt
instr/src/: DepTrace.cpp  DepTrace.hpp  DepTrace_DEVICE.cpp  DepTrace_HOST.cpp  Enums.hpp  InstrProp.hpp  MetadataHandler.cpp  MetadataHandler.hpp  ScabbardLinkPass.hpp  ScabbardPass.1.cpp  ScabbardPass.cpp  ScabbardPass.hpp  ScabbardPostPass.cpp  TestPass.hpp  calcInstrWhen_impl.cpp  loadModule.cpp  loadModule.hpp  registry.cpp  scabbard.cpp
instr/src/TestPass/: ScabbardPostPass.hpp  TestPass.cpp  Util.hpp
instrlib/: CMakeLists.txt
instrlib/include/scabbard/instr/: AsyncQueue.hpp  TraceWriter.hpp  calls.hpp  globals.hpp
instrlib/src/: AsyncQueue.cpp  TraceWriter.cpp  defs.cpp
interception/: CMakeLists.txt  argconfig.py  colors.py  driver.py  intercept.c  scabbard  scabbard.py
lib/: CMakeLists.txt
lib/include/glob/: glob.hpp
lib/include/oster/: SplittingIntervalMap.hpp
lib/include/scabbard/: Enums.hpp  Metadata.hpp  MetadataIO.hpp  TraceData.hpp  TraceFile.hpp  dim3.hpp  instr-names.def  version.h
lib/src/: Enums.cpp  MetadataIO.cpp  TraceData.cpp  tmp.cpp
libtrace/: CMakeLists.txt
libtrace/include/scabbard/trace/: AsyncQueue.hpp  DeviceTracker.hpp  MetadataStrore.hpp  TraceData.hpp  TraceWriter.hpp  calls.hpp  globals.hpp
libtrace/src/: AsyncQueue.cpp  AsyncQueue.ll  MetadataStore.cpp  MetadataStore.ll  TraceWriter.cpp  TraceWriter.ll  defs.cpp  defs.ll  device-defs.cpp  libtrace.ll
src/: Consumer.cpp  Consumer.hpp  Consummer.cpp  scabbard.cpp
test/: HIPUtil.hpp  Makefile  README.md  SDKUtil.hpp  clock_test.cpp  clock_test.ll  curvitest.bc  curvitest.ll  dct.cpp  def-race-test.man.sh  hello.bc  hello.cpp  hello.out.bc  managed_clock_test.cpp  managed_clock_test.instr.ll  managed_clock_test.ll  maybe-race-test.cpp  maybe-race-test.man.cpp  maybe-race-test.man.scabbard.trace  maybe-race-test.man.sh  maybe-race-test.scabbard.trace  maybe-race-test.sh  run_x.sh  spmm_test.cu  test.C  test.bc  test.cpp  test.dbg.ll  test.instr.ll  test.instr2.ll  test.ll  test.scabbard.trace  test.sh  trace-file-read-test.man.trace  unifmem_test.bc  unifmem_test.cpp  unifmem_test.dbg.bc  unifmem_test.dbg.ll  unifmem_test.instr.ll  unifmem_test.ll
test/basic/: README.md  def-race.man.cpp  def-race.man.sh  maybe-race.cpp  maybe-race.man.sh  maybe-race.sh  test.cpp  test.instr2.ll  test.sh
test/cmake-build/: CMakeLists.txt  HIPExample.cpp
test/cuda/: dpid.cpp  dpid.cu  dpid.instr.ll  dpid.man.cpp  spmm_test.cpp
test/dev/: unifmem_test.cpp  unifmem_test.dbg.bc  unifmem_test.dbg.ll
test/device/: README.md  def-race.cpp  def-race.instr.ll  def-race.man.cpp  def-race.man.scabbard.trace  def-race.scabbard.trace  maybe-race.cpp  maybe-race.man.cpp  maybe-race.man.scabbard.trace  memcpy-no-race.cpp  memcpy-no-race.man.cpp  no-race.cpp  no-race.man.cpp  no-race.man.scabbard.trace
test/device/dual-stream/: def-race.cpp  def-race.man.cpp  def-race.man.scabbard.trace  maybe-race.cpp  maybe-race.man.cpp  maybe-race.man.scabbard.trace  no-race.cpp  no-race.man.cpp  no-race.man.scabbard.trace
test/host/: README.md
test/ignacio/test/: CMakeLists.txt  run.sh
test/instr/: Events.ll  curvilinear4sgc.bc  curvilinear4sgc.ll
test/managed/: README.md
test/perf/: colors.py  run.sh  test.cpp  test.py  test.tsv
verif/: CMakeLists.txt
verif/src/: BufferedReader.cpp  BufferedReader.hpp  FileMask.hpp  StateMachine.cpp  StateMachine.hpp  TraceReader.cpp  TraceReader.hpp  less.hpp  main.cpp
